--- a/src/content/style.css
+++ b/src/content/style.css
@@ -1,5 +1,15 @@
+#balloon-container{
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+}
+
 .balloon{
-    position: absolute;
+    position: relative;
     z-index: 9999;
     cursor: pointer;
     top: 0;
