Remove all styles from stylesheet

--- a/src/popup/style.css
+++ b/src/popup/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --background: hsl(0 0% 100%);
   --foreground: hsl(240 10% 3.9%);
@@ -19,80 +23,4 @@
   --input: hsl(240 5.9% 90%);
   --ring: hsl(346.8 77.2% 49.8%);
   --radius: 0.5rem;
-}
-
-html,
-body {
-  --width: 256px;
-  min-width: var(--width);
-  width: var(--width);
-  margin: 0;
-  padding: 0;
-
-  color: var(--foreground);
-  background-color: var(--background);
-}
-
-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.5rem 1rem;
-
-  color: var(--primary-foreground);
-  background-color: var(--primary);
-}
-
-header h1 {
-  margin: 0;
-  font-size: 1.25rem;
-  font-weight: 600;
-}
-
-main {
-  margin: auto;
-  width: 90%;
-}
-
-.navigation-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  position: absolute;
-  opacity: 0.8;
-
-  padding: 0.4rem;
-  color: var(--primary-foreground);
-}
-
-.navigation-icon:hover {
-  opacity: 1;
-}
-
-.settings-container{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.5rem 0;
-}
-
-.button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  padding: 0.5rem 1rem;
-  margin: 0.5rem 0;
-
-  color: var(--primary-foreground);
-  background-color: var(--primary);
-  border: none;
-  border-radius: var(--radius);
-  cursor: pointer;
-}
-
-.danger {
-  color: var(--destructive-foreground);
-  background-color: var(--destructive);
 }
