Add swing and wave animations #188

--- a/src/content/style.css
+++ b/src/content/style.css
@@ -42,3 +42,24 @@
     transform: translateY(-10vh);
   }
 }
+
+@keyframes swing {
+  0% {
+    transform: translateX(15px);
+  }
+  50% {
+    transform: translateX(-15px);
+  }
+  100% {
+    transform: translateX(15px);
+  }
+}
+
+@keyframes wave {
+  0% {
+    transform: rotate(-8deg);
+  }
+  100% {
+    transform: rotate(8deg);
+  }
+}
