--- a/resources/balloons/default/default.css
+++ b/resources/balloons/default/default.css
@@ -1,3 +1,12 @@
+.balloon img {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 1/1;
+  object-fit: contain;
+
+  pointer-events: none;
+}
+
 @keyframes rise {
   0% {
     transform: translateY(100vh);
