Specify an x value where the balloon needs to rise to close #250

--- a/resources/balloons/default/default.css
+++ b/resources/balloons/default/default.css
@@ -12,7 +12,7 @@
     transform: translateY(100vh);
   }
   100% {
-    transform: translateY(-10vh);
+    transform: translateY(var(--rise-to, -10vh));
   }
 }
 
