--- a/resources/balloons/default/default.css
+++ b/resources/balloons/default/default.css
@@ -1,3 +1,20 @@
+.balloon {
+  position: fixed;
+  z-index: 9999;
+  cursor: pointer;
+  top: 0;
+
+  /* Make image not dragable and not selectable */
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+
+  pointer-events: auto;
+}
+
 .balloon img {
   width: 100%;
   height: 100%;
