--- a/resources/balloons/disco/disco.css
+++ b/resources/balloons/disco/disco.css
@@ -1,4 +1,4 @@
-.balloon[data-balloon='disco'] .glow {
+[data-balloon='disco'] .glow {
   /* Glowing ring effect */
   position: absolute;
   top: 0;
@@ -17,8 +17,8 @@
   filter: blur(4px);
 }
 
-.balloon[data-balloon='disco'] .glow::before,
-.balloon[data-balloon='disco'] .glow::after {
+[data-balloon='disco'] .glow::before,
+[data-balloon='disco'] .glow::after {
   content: '';
   position: absolute;
   border-radius: 50%;
@@ -33,7 +33,7 @@
   will-change: transform; /* Hint for browser optimization */
 }
 
-.balloon[data-balloon='disco'] .glow::before {
+[data-balloon='disco'] .glow::before {
   --rays: 5;
   --ray-width: 15deg;
   --mask: repeating-conic-gradient(
@@ -55,7 +55,7 @@
   opacity: 0.4;
 }
 
-.balloon[data-balloon='disco'] .glow::after {
+[data-balloon='disco'] .glow::after {
   --rays: 7;
   --ray-width: 20deg;
   --mask: repeating-conic-gradient(
@@ -96,10 +96,13 @@
 
 @keyframes disco-pulse {
   0% {
-    /* filter: blur(4px) brightness(1.2); */
+    filter: blur(2px) brightness(1.2);
+  }
+  50% {
+    filter: blur(3px) brightness(1.5);
   }
   100% {
-    /* filter: blur(6px) brightness(1.5); */
+    filter: blur(2px) brightness(1.2);
   }
 }
 
@@ -120,125 +123,3 @@
     transform: scale(0.8);
   }
 }
-
-@keyframes ray-length-varied {
-  0% {
-    transform: scale(0.65) rotate(-2deg);
-  }
-  15% {
-    transform: scale(1.3) rotate(1deg);
-  }
-  30% {
-    transform: scale(0.85) rotate(3deg);
-  }
-  45% {
-    transform: scale(1.15) rotate(-1deg);
-  }
-  60% {
-    transform: scale(0.75) rotate(-3deg);
-  }
-  75% {
-    transform: scale(1.25) rotate(2deg);
-  }
-  90% {
-    transform: scale(0.8) rotate(0deg);
-  }
-  100% {
-    transform: scale(1.1) rotate(-2deg);
-  }
-}
-
-/* Add an additional animation to create ultra-long rays occasionally */
-@keyframes ultra-ray {
-  0%,
-  20%,
-  40%,
-  60%,
-  80%,
-  100% {
-    transform: scale(1);
-  }
-  10%,
-  50%,
-  90% {
-    transform: scale(1.4);
-  }
-  30%,
-  70% {
-    transform: scale(1.2);
-  }
-}
-/* 
-.balloon[data-balloon='disco'] .extra-rays::before {
-  content: '';
-  position: absolute;
-  top: -250%;
-  left: -250%;
-  width: 600%;
-  height: 600%;
-  border-radius: 50%;
-  background: conic-gradient(
-    rgba(255, 0, 255, 0.4),
-    rgba(0, 255, 255, 0.4),
-    rgba(255, 255, 0, 0.4),
-    rgba(0, 255, 0, 0.4),
-    rgba(255, 0, 0, 0.4),
-    rgba(255, 0, 255, 0.4)
-  );
-  -webkit-mask: repeating-conic-gradient(
-    transparent 0deg,
-    transparent 40deg,
-    black 40deg,
-    black 43deg
-  );
-  mask: repeating-conic-gradient(
-    transparent 0deg,
-    transparent 40deg,
-    black 40deg,
-    black 43deg
-  );
-  filter: blur(8px) brightness(1.5);
-  animation:
-    disco-spin var(--rotation-speed, 15s) infinite linear,
-    disco-color var(--glow-speed, 10s) infinite linear,
-    ultra-ray var(--ray-length-speed, 12s) infinite step-end;
-  opacity: 0.5;
-  transform-origin: center center;
-}
-
-.balloon[data-balloon='disco'] .extra-rays::after {
-  content: '';
-  position: absolute;
-  top: -200%;
-  left: -200%;
-  width: 500%;
-  height: 500%;
-  border-radius: 50%;
-  background: conic-gradient(
-    rgba(255, 0, 255, 0.5),
-    rgba(0, 255, 255, 0.5),
-    rgba(255, 255, 0, 0.5),
-    rgba(0, 255, 0, 0.5),
-    rgba(255, 0, 0, 0.5),
-    rgba(255, 0, 255, 0.5)
-  );
-  -webkit-mask: repeating-conic-gradient(
-    transparent 0deg,
-    transparent 60deg,
-    black 60deg,
-    black 65deg
-  );
-  mask: repeating-conic-gradient(
-    transparent 0deg,
-    transparent 60deg,
-    black 60deg,
-    black 65deg
-  );
-  filter: blur(7px) brightness(1.4);
-  animation:
-    disco-spin var(--rotation-speed, 13s) infinite linear reverse,
-    disco-color var(--glow-speed, 8s) infinite linear,
-    ray-length-varied var(--pulse-speed, 4s) infinite alternate ease-in-out;
-  opacity: 0.6;
-  transform-origin: center center;
-} */
